objects/Sales_Coach_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Stage__c</fullName>
        <label>Stage Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Color__c</fullName>
        <label>Stage Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
</CustomObject>